<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".LoginFragment">


        <TextView
            android:id="@+id/email_label"
            style="@style/LabelTextStyle"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/email_input"
            style="@style/InputFieldStyle"
            android:layout_marginTop="@dimen/large_margin"
            android:hint="@string/email_input_hint"
            android:inputType="textWebEmailAddress" />

        <TextView
            android:id="@+id/password_label"
            style="@style/LabelTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/password_input"
            style="@style/InputFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/signup_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/signup_button" />
    </LinearLayout>

</layout>